; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/nbtree/extr_nbtcompare.c_btoidfastcmp.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/nbtree/extr_nbtcompare.c_btoidfastcmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@A_GREATER_THAN_B = common dso_local global i32 0, align 4
@A_LESS_THAN_B = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @btoidfastcmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @btoidfastcmp(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* %5, align 4
  %11 = call i64 @DatumGetObjectId(i32 %10)
  store i64 %11, i64* %8, align 8
  %12 = load i32, i32* %6, align 4
  %13 = call i64 @DatumGetObjectId(i32 %12)
  store i64 %13, i64* %9, align 8
  %14 = load i64, i64* %8, align 8
  %15 = load i64, i64* %9, align 8
  %16 = icmp sgt i64 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %3
  %18 = load i32, i32* @A_GREATER_THAN_B, align 4
  store i32 %18, i32* %4, align 4
  br label %26

19:                                               ; preds = %3
  %20 = load i64, i64* %8, align 8
  %21 = load i64, i64* %9, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %24

23:                                               ; preds = %19
  store i32 0, i32* %4, align 4
  br label %26

24:                                               ; preds = %19
  %25 = load i32, i32* @A_LESS_THAN_B, align 4
  store i32 %25, i32* %4, align 4
  br label %26

26:                                               ; preds = %24, %23, %17
  %27 = load i32, i32* %4, align 4
  ret i32 %27
}

declare dso_local i64 @DatumGetObjectId(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
